force-app/main/default/objects/Icons__c/Icons__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Icons</label>
</CustomObject>