force-app/main/default/objects/Icons__c/fields/Could__c.field-meta.xml
<CustomField>
    <fullName>Could__c</fullName>
    <label>Could</label>
    <length>100</length>
    <type>Text</type>
</CustomField>