force-app/main/default/objects/Icons__c/fields/Green__c.field-meta.xml
<CustomField>
    <fullName>Green__c</fullName>
    <label>Green</label>
    <length>255</length>
    <type>Text</type>
</CustomField>