force-app/main/default/objects/Icons__c/fields/Grey__c.field-meta.xml
<CustomField>
    <fullName>Grey__c</fullName>
    <label>Grey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>