force-app/main/default/objects/Icons__c/fields/Must__c.field-meta.xml
<CustomField>
    <fullName>Must__c</fullName>
    <label>Must</label>
    <length>100</length>
    <type>Text</type>
</CustomField>