force-app/main/default/objects/Icons__c/fields/Orange__c.field-meta.xml
<CustomField>
    <fullName>Orange__c</fullName>
    <label>Orange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>