force-app/main/default/objects/Icons__c/fields/Red__c.field-meta.xml
<CustomField>
    <fullName>Red__c</fullName>
    <label>Red</label>
    <length>255</length>
    <type>Text</type>
</CustomField>