force-app/main/default/objects/Icons__c/fields/Should__c.field-meta.xml
<CustomField>
    <fullName>Should__c</fullName>
    <label>Should</label>
    <length>100</length>
    <type>Text</type>
</CustomField>