force-app/main/default/objects/Icons__c/fields/Wont__c.field-meta.xml
<CustomField>
    <fullName>Wont__c</fullName>
    <label>Won&apos;t</label>
    <length>100</length>
    <type>Text</type>
</CustomField>