force-app/main/default/objects/Icons__c/fields/Yellow__c.field-meta.xml
<CustomField>
    <fullName>Yellow__c</fullName>
    <label>Yellow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>